# llama2.c-android-wrapper

./: README-ORIGIN.md
android/app/src/main/cpp/: CMakeLists.txt  inference-gpu.c  inference.c
android/app/src/main/java/com/celikin/llama2/wrapper/: InferenceRunner.kt  InferenceRunnerManager.kt
android/gradle/: libs.versions.toml
